crates/solidity-v2/testing/snapshots/binder_output/contracts/overloaded_external_selected/generated/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
[type-system/cannot-call-via-contract-type-name] Error: Cannot call function via contract type name.
    ╭─[input.sol:13:9]
    │
 13 │         A.f();
    │         ──┬──  
    │           ╰──── Error occurred here.
────╯
[type-system/cannot-call-via-contract-type-name] Error: Cannot call function via contract type name.
    ╭─[input.sol:14:9]
    │
 14 │         A.f(1);
    │         ───┬──  
    │            ╰──── Error occurred here.
────╯

------------------------------------------------------------------------

Definitions (6):
- Def: #1 ["A" @ input.sol:4:10] (contract)
- Def: #2 ["f" @ input.sol:5:14] (function, type: function () returns void)
- Def: #3 ["f" @ input.sol:6:14] (function, type: function (uint256) returns void)
- Def: #4 ["x" @ input.sol:6:21] (parameter, type: uint256)
- Def: #5 ["B" @ input.sol:9:10] (contract)
- Def: #6 ["g" @ input.sol:10:14] (function, type: function () returns void)

------------------------------------------------------------------------

References (4):
- Ref: ["A" @ input.sol:13:9] -> #1
- Ref: ["f" @ input.sol:13:11] -> #2
- Ref: ["A" @ input.sol:14:9] -> #1
- Ref: ["f" @ input.sol:14:11] -> #3

------------------------------------------------------------------------

Unbound identifiers (0):

------------------------------------------------------------------------

Bindings: 
    ╭─[input.sol:1:1]
    │
  4 │ contract A {
    │          ┬  
    │          ╰── name: 1
  5 │     function f() external {}
    │              ┬  
    │              ╰── name: 2
  6 │     function f(uint x) external {}
    │              ┬      ┬  
    │              ╰───────── name: 3
    │                     │  
    │                     ╰── name: 4
    │ 
  9 │ contract B {
    │          ┬  
    │          ╰── name: 5
 10 │     function g() public {
    │              ┬  
    │              ╰── name: 6
    │ 
 13 │         A.f();
    │         ┬ ┬  
    │         ╰──── ref: 1
    │           │  
    │           ╰── ref: 2
 14 │         A.f(1);
    │         ┬ ┬  
    │         ╰──── ref: 1
    │           │  
    │           ╰── ref: 3
────╯
